<resources>
    <string name="app_name">Final Project H&amp;M</string>
    <string name="facebook_app_id">1530057683776324</string>
    <string name="fb_login_protocol_scheme">fb1530057683776324</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAN1bAS6Rm4NiulHhWQMGGvktqsKQvYeMc</string>
    <string-array name="navigation_drawer_items_array">
        <item>Products</item>
        <item>Ladies</item>
        <item>Men</item>
        <item>Kids</item>
        <item>Magazine</item>
        <item>Wish List</item>
        <item>My H&amp;M</item>
        <item>Support</item>
        <item>Find a store</item>
        <item>Newsletter</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="wish_list">Wish List</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="general_menu_icon_info">Info</string>
    <string name="log_in_failed">"Login Failed"</string>
    <string name="customer_support">Customer Support</string>
    <string name="customer_service">Customer Service</string>
    <string name="find_a_store">Find a Store</string>
    <string name="follow_us">Follow Us</string>
    <string name="contact">Contact</string>
    <string name="help">Help</string>
    <string name="contact_info">Contact Info</string>
    <string name="send_a_question">Send a Question</string>
    <string name="contact_form">Contact Form</string>
    <string name="contact_form_choose_subject">Choose a subject area:</string>
    <string name="contact_form_add_question">Please add your question:</string>
    <string name="contact_form_enter_name">Please enter your name:</string>
    <string name="contact_form_enter_email">Please enter your email:</string>
    <string name="btn_send">Send</string>
    <string name="btn_register">Register</string>
    <string name="registration">Registration</string>
    <string name="required_fields">Required Fields</string>
    <string name="enter_email">Email (Username):</string>
    <string name="enter_password">Password:</string>
    <string name="enter_confirm_password">Confirm Password:</string>
    <string name="register_accept_privacy_policy">By clicking \'Register\' i accept the\ </string>
    <string name="register_privacy_policy">Privacy Policy</string>
    <string name="my_hm">My H&amp;M</string>
    <string name="my_hm_inbox">Inbox</string>
    <string name="my_hm_user_profile">User Profile</string>
    <string name="my_hm_settings">Settings</string>
    <string name="forgot_password">QUÊN MẬT KHẨU</string>
    <string name="forgot_password_hint_email">Nhập email</string>
    <string name="btn_timtaikhoan">Tìm Tài Khoản</string>
    <string name="call_custom_service">HOẶC GỌI ĐẾN TRUNG TÂM CHĂM SÓC KHÁCH HÀNG</string>
    <string name="btn_call_custom_service">Gọi +84 9 9999 9999</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_login_details">Forgot login detail?</string>
    <string name="new_user">New User</string>
    <string name="log_in_warning">You must fill in all of the field!</string>
    <string name="forgot_password_intro">Nhập địa chỉ email mà bạn sử dụng để đăng ký,chúng tôi sẽ gửi mật khẩu mới cho bạn.</string>
    <string name="password_warning">Your password must have at least 6 characters. Use uppercase and lowercase with number to make it safer.</string>
    <string name="contact_form_intro">Your local Customer Service team is always ready to help! Whatever your  question is, please don\'t hesitate to give us a call,
        or send an email. For an easy and quick way to find what you\'re looking for, please take a look at our FAQs\n\nPlease note that you can\'t apply for a job through this contact form"</string>
</resources>