<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hiang.handm3.ForgetPasswordFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_general"
            android:paddingBottom="@dimen/padding_bottom_general"
            android:paddingEnd="@dimen/padding_end_general"
            android:paddingLeft="@dimen/padding_start_general"
            android:paddingRight="@dimen/padding_end_general"
            android:paddingStart="@dimen/padding_start_general"
            android:paddingTop="@dimen/padding_top_general"
            android:background="@drawable/tv_ten_danh_muc"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="@dimen/font_size_general" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_general"
            android:layout_marginEnd="@dimen/margin_end_general"
            android:layout_marginLeft="@dimen/margin_start_general"
            android:layout_marginRight="@dimen/margin_end_general"
            android:layout_marginStart="@dimen/margin_start_general"
            android:layout_marginTop="@dimen/margin_top_general"
            android:paddingBottom="@dimen/padding_bottom_general"
            android:paddingEnd="@dimen/padding_end_general"
            android:paddingLeft="@dimen/margin_padding_none"
            android:paddingRight="@dimen/padding_end_general"
            android:paddingStart="@dimen/margin_padding_none"
            android:paddingTop="@dimen/padding_top_general"
            android:text="@string/forgot_password_intro" />

        <EditText
            android:id="@+id/etEmailForget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_general"
            android:layout_marginEnd="@dimen/margin_end_general"
            android:layout_marginLeft="@dimen/margin_start_general"
            android:layout_marginRight="@dimen/margin_end_general"
            android:layout_marginStart="@dimen/margin_start_general"
            android:layout_marginTop="@dimen/margin_top_general"
            android:paddingBottom="@dimen/padding_bottom_general"
            android:paddingEnd="@dimen/padding_end_general"
            android:paddingLeft="@dimen/padding_start_general"
            android:paddingRight="@dimen/padding_end_general"
            android:paddingStart="@dimen/padding_start_general"
            android:paddingTop="@dimen/padding_top_general"
            android:ems="10"
            android:hint="@string/forgot_password_hint_email"
            android:background="@drawable/et_background"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tvThongBao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_general"
            android:layout_marginEnd="@dimen/margin_end_general"
            android:layout_marginLeft="@dimen/margin_start_general"
            android:layout_marginRight="@dimen/margin_end_general"
            android:layout_marginStart="@dimen/margin_start_general"
            android:layout_marginTop="@dimen/margin_top_general"
            android:paddingBottom="@dimen/padding_bottom_general"
            android:paddingEnd="@dimen/padding_end_general"
            android:paddingLeft="@dimen/padding_start_general"
            android:paddingRight="@dimen/padding_end_general"
            android:paddingStart="@dimen/padding_start_general"
            android:paddingTop="@dimen/padding_top_general"
            android:textColor="#ff0000" />

        <Button
            android:id="@+id/btnForget"
            android:text="@string/btn_timtaikhoan"
            android:background="@drawable/setbackground"
            android:textSize="@dimen/font_size_general"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_general"
            android:layout_marginEnd="@dimen/margin_end_general"
            android:layout_marginLeft="@dimen/margin_start_general"
            android:layout_marginRight="@dimen/margin_end_general"
            android:layout_marginStart="@dimen/margin_start_general"
            android:layout_marginTop="@dimen/margin_top_general"
            android:paddingBottom="@dimen/padding_bottom_general"
            android:paddingEnd="@dimen/padding_end_general"
            android:paddingLeft="@dimen/padding_start_general"
            android:paddingRight="@dimen/padding_end_general"
            android:paddingStart="@dimen/padding_start_general"
            android:paddingTop="@dimen/padding_top_general" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_general"
            android:layout_marginEnd="@dimen/margin_end_general"
            android:layout_marginLeft="@dimen/margin_start_general"
            android:layout_marginRight="@dimen/margin_end_general"
            android:layout_marginStart="@dimen/margin_start_general"
            android:layout_marginTop="@dimen/margin_top_general"
            android:paddingBottom="@dimen/padding_bottom_general"
            android:paddingEnd="@dimen/padding_end_general"
            android:paddingLeft="@dimen/margin_padding_none"
            android:paddingRight="@dimen/padding_end_general"
            android:paddingStart="@dimen/margin_padding_none"
            android:paddingTop="@dimen/padding_top_general"
            android:text="@string/call_custom_service"
            android:textStyle="bold"
            android:textColor="#FF000000"/>

        <Button
            android:id="@+id/btnCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_general"
            android:layout_marginEnd="@dimen/margin_end_general"
            android:layout_marginLeft="@dimen/margin_start_general"
            android:layout_marginRight="@dimen/margin_end_general"
            android:layout_marginStart="@dimen/margin_start_general"
            android:layout_marginTop="@dimen/margin_top_general"
            android:paddingBottom="@dimen/padding_bottom_general"
            android:paddingEnd="@dimen/padding_end_general"
            android:paddingLeft="@dimen/padding_start_general"
            android:paddingRight="@dimen/padding_end_general"
            android:paddingStart="@dimen/padding_start_general"
            android:paddingTop="@dimen/padding_top_general"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="@dimen/font_size_general"
            android:background="@drawable/setbackground"
            android:textAllCaps="false"
            android:text="@string/btn_call_custom_service"/>

    </LinearLayout>
