<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.greenacademy.ga_finalprojecthm.fragment.MyHMFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_general"
        android:paddingBottom="@dimen/padding_bottom_general"
        android:paddingEnd="@dimen/padding_end_general"
        android:paddingLeft="@dimen/padding_start_general"
        android:paddingRight="@dimen/padding_end_general"
        android:paddingStart="@dimen/padding_start_general"
        android:paddingTop="@dimen/padding_top_general"
        android:background="#ff000000"
        android:gravity="center_vertical"
        android:text="@string/my_hm"
        android:textAllCaps="true"
        android:textColor="#ffffffff"
        android:textSize="@dimen/font_size_general"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvInbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_general"
        android:layout_marginEnd="@dimen/margin_end_general"
        android:layout_marginLeft="@dimen/margin_start_general"
        android:layout_marginRight="@dimen/margin_end_general"
        android:layout_marginStart="@dimen/margin_start_general"
        android:layout_marginTop="@dimen/margin_top_general"
        android:drawableLeft="@drawable/myhm_listicon_inbox"
        android:drawablePadding="@dimen/padding_textview_drawable"
        android:drawableStart="@drawable/myhm_listicon_inbox"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/padding_bottom_general"
        android:paddingEnd="@dimen/padding_end_general"
        android:paddingLeft="@dimen/padding_start_general"
        android:paddingRight="@dimen/padding_end_general"
        android:paddingStart="@dimen/padding_start_general"
        android:paddingTop="@dimen/padding_top_general"
        android:text="@string/my_hm_inbox"
        android:textColor="#ff000000"
        android:textSize="@dimen/font_size_general" />

    <TextView
        android:id="@+id/tvUserProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_general"
        android:layout_marginEnd="@dimen/margin_end_general"
        android:layout_marginLeft="@dimen/margin_start_general"
        android:layout_marginRight="@dimen/margin_end_general"
        android:layout_marginStart="@dimen/margin_start_general"
        android:layout_marginTop="@dimen/margin_top_general"
        android:drawableEnd="@drawable/lock_20px"
        android:drawableLeft="@drawable/myhm_listicon_userprofile"
        android:drawablePadding="@dimen/padding_textview_drawable"
        android:drawableRight="@drawable/lock_20px"
        android:drawableStart="@drawable/myhm_listicon_userprofile"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/padding_bottom_general"
        android:paddingEnd="@dimen/padding_end_general"
        android:paddingLeft="@dimen/padding_start_general"
        android:paddingRight="@dimen/padding_end_general"
        android:paddingStart="@dimen/padding_start_general"
        android:paddingTop="@dimen/padding_top_general"
        android:text="@string/my_hm_user_profile"
        android:textColor="#ff000000"
        android:textSize="@dimen/font_size_general" />

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_general"
        android:layout_marginEnd="@dimen/margin_end_general"
        android:layout_marginLeft="@dimen/margin_start_general"
        android:layout_marginRight="@dimen/margin_end_general"
        android:layout_marginStart="@dimen/margin_start_general"
        android:layout_marginTop="@dimen/margin_top_general"
        android:drawableLeft="@drawable/myhm_listicon_settings"
        android:drawablePadding="@dimen/padding_textview_drawable"
        android:drawableStart="@drawable/myhm_listicon_settings"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/padding_bottom_general"
        android:paddingEnd="@dimen/padding_end_general"
        android:paddingLeft="@dimen/padding_start_general"
        android:paddingRight="@dimen/padding_end_general"
        android:paddingStart="@dimen/padding_start_general"
        android:paddingTop="@dimen/padding_top_general"
        android:text="@string/my_hm_settings"
        android:textColor="#ff000000"
        android:textSize="@dimen/font_size_general" />

</LinearLayout>
